--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 body {
     height: 100%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 main {
@@ -35,6 +36,42 @@ main {
 }
 
 .book-table {
-    width: 100vw;
-    border: 1px solid black;
+  
+    width: 50vw;
+    border-collapse: collapse;
+    
+}
+
+.book-table button {
+    padding: 10px 30px;
+    
+    text-transform: uppercase;
+    font-size: 0.7rem;
+    border: 1px solid #bbb;
+    border-radius: 5px;
+    background: none;
+    box-sizing: border-box;
+}
+
+.book-table th {
+    font-weight: 600;
+    text-align: left;   
+}
+
+.book-table tbody td {
+    font-size: 0.9rem;
+    line-height: 1.1rem;
+    box-sizing: border-box;
+}
+
+
+.book-table td,th {
+    width: 25%;
+    padding: 20px;
+    padding-left: 0;
+}
+
+
+.book-table tr {
+    border-bottom: 1px solid #bbb;
 }
